--- a/index.html
+++ b/index.html
@@ -11,12 +11,9 @@
         <table bgcolor="pink" width="100%" height="100" border="1"  rules="all"><td align="center">
 <header>
     Welcome our page
-</header>
-</td>
-</table>
+</header> 
 <main >
-        <tr >
-        <tr >
+        
     <table bgcolor="lightblue" width="100%" height="500" >
        <div> <th height="50">Company</th>
         <th>Branches</th>
@@ -25,7 +22,16 @@
         <tr>
             <td bgcolor="white">ZOHO</td>
             <td bgcolor="grey">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellendus, voluptatibus nostrum? Delectus quisquam fugit temporibus doloremque nobis aliquam voluptates debitis quia earum deleniti blanditiis enim explicabo tenetur iusto, ipsam quos.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni voluptatibus dolore eius magnam nesciunt omnis inventore voluptatem accusamus aperiam illum sapiente ut at, fuga eaque eos. Corrupti illum explicabo nihil!
+                Illo laudantium iste odit exercitationem vero corporis necessitatibus perferendis, aliquid ad vitae ipsam aspernatur facilis incidunt libero praesentium minus aut accusantium neque dicta nesciunt asperiores sed alias? Eaque, fugiat deleniti.
+                Doloremque doloribus excepturi odio ipsum consequatur voluptate nulla incidunt tempora perferendis error porro illum laudantium, culpa aliquid eius dignissimos a beatae quia dicta impedit nobis eligendi. Laudantium maxime sunt voluptatem!
+                Praesentium minima voluptate a ipsam laudantium beatae fugiat vitae tempore recusandae consequuntur soluta dolorem repellendus doloremque laboriosam in repudiandae, ullam delectus quia labore totam doloribus, aperiam quos. Voluptatem, suscipit vel?
+                Modi, aperiam earum vero recusandae et aliquid a officia animi ut, iure maxime nihil iusto laboriosam quas magnam ducimus molestiae odit corrupti ipsam quaerat eius. Delectus repudiandae sapiente aliquam fugiat.
+                Et laudantium inventore commodi deleniti iste placeat earum, fugit aut quam. Nam tempora nihil suscipit sint corrupti? Magni, illum error culpa ea officia animi nesciunt? Eum sint neque quia ad.
+                Fuga, soluta pariatur repellat omnis, a asperiores iure dolores animi est fugit tempore natus, obcaecati beatae illum id explicabo odit voluptatibus aspernatur ab inventore? Aliquid est nobis magni aspernatur rerum!
+                Odio corrupti officia dicta nostrum ullam, cumque voluptatum voluptate doloribus, culpa recusandae fugit, labore architecto quis quo quas repellendus! Quisquam consequuntur debitis, quam necessitatibus fugiat animi. Perferendis sapiente atque labore.
+                Impedit adipisci ea necessitatibus ratione consequatur, assumenda nostrum perspiciatis nemo qui nisi debitis asperiores provident explicabo similique tenetur error ipsa itaque nam officiis sed. Dignissimos odit cupiditate mollitia a possimus.
+                Ex, repudiandae beatae. Quis quisquam quia accusamus, hic ducimus amet quas, a ratione enim voluptatibus fugiat iusto aliquam nemo cum praesentium consequuntur est minima autem, architecto nihil. Asperiores, animi laborum.
             </td>
             
             <td bgcolor="white">24X7</td>
