--- a/third.html
+++ b/third.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Save a life, pet a stray</title>
 </head>
 <body>
+    <h1 align="center">Feed a stray, earn a friend</h1>
+   <center> <br><h2>One meal, one smile, one wag</h2>
+    <img src="doggy1.jpeg" width="50%" height="500" align="center">
+    <br><br><br>
+    <h2>Street dogs don’t need pity, they need love.</h2>
+     <img src="doggy 2.jpeg" width="50%" height="500" align="center">
+         <br><br><br>
+     <h2>Don’t buy love, rescue it</h2>
+     <img src="doggy3.jpeg" width="50%" height="500" align="center">
+<br><br><br><br><br>
+<h1>click image &#128071;</h1>
+    <a href="https://youtube.com/shorts/ZTkPFOkJ3ss?si=EWHyu10MhGgf3-Ir">
+           <img src="help.jpeg" width="50%" height="500" align="center">  
+    </a>
     
+</center>
+
 </body>
 </html>
